
  Manoj:
  * Bug fix: "policy 11.5.3 refers to using the menu package to register
    docs", thanks to Joey Hess                             (Closes: #222553).
  * Bug fix: "[PROPOSAL] Document Uploaders: field in policy", thanks to
    Andrew Pollock. Andreas Metzler provided the wording, though it was
    modified during inclusion.                              (Closes: #203145).

 --

debian-policy (3.6.1.1) unstable; urgency=low

  Manoj:
  * [AMENDMENT 15/09/2003] Move documentation of behavior of ancient dpkg
    in 6.6 to a footnote.                                  closes: Bug#209855
  * Fix the outdated link for the mime subpolicy.          closes: Bug#212153
  * Fix a missing comma in the list of sections            closes: Bug#215524
  * Fix spelling of sysv-rc                                closes: Bug#215558
  * [AMENDMENT 28/03/2004] ${perl:Depends} documentation
    incomplete. Added an informative foot note stating that dependencies
    caused by versioned uses and on separately packaged modules are not
    included in this variable and must be explicitly included.
                                                           closes: Bug#202054
  * Clarified that section 3.2.1 refers to the date based postion of  the
    version number, if not already clear from the context. This allows
    developers leeway in selecting date based version numbers for their
    packages, without loosing the advantages of the format specified in
    this section.                                          closes: Bug#248618
  * Bug fix: "Broken link to virtual-package-names-list.txt in section
    3.6", thanks to Carlos O'Donell                        (Closes: #248786).
  * Bug fix: "Broken link to debconf_specification.txt.gz in section
    3.10.1 of the Debian Policy manual.", thanks to Carlos O'Donell and
    Scott C.MacCallum <scm@madoshi.com>            (Closes: #248788, 247761).
  * Bug fix: "missing commas in subsections list", thanks to Filippo