@@ -49,7 +49,7 @@ case "$1" in
 
     fi ;;
   deconfigure)
-    if test "$2" != in-favour -o "$5" != removing; then
+    if test "$2" != in-favour || test "$5" != removing; then
       echo "$0: undocumented call to \`prerm $*'" 1>&2
       exit 0
     fi
